--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#nome-del-progetto-e-repository-github">Nome del progetto e repository github</a>
           </li>
           <li class="tag-h2">
-            <a href="#membri-del-team">Pamela</a>
+            <a href="#membri-del-team">Membri del team</a>
           </li>
           <li class="tag-h2">
             <a href="#presentazione-concept">Presentazione del concept</a>
