Variazione file html: inserimento dati Pamela

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
           <table>
             <thead>
               <tr>
-                <th style="text-align: center">Matricola</th>
-                <th style="text-align: center">Cognome</th>
-                <th style="text-align: center">Nome</th>
-                <th style="text-align: center">E-mail</th>
-                <th style="text-align: center">GitHub</th>
+                <th style="text-align: center">s240165</th>
+                <th style="text-align: center">Siclari</th>
+                <th style="text-align: center">Pamela</th>
+                <th style="text-align: center">pamela.sicl@gmail.com</th>
+                <th style="text-align: center">PamelaSiclari</th>
               </tr>
             </thead>
             <tbody>
