Variazione file html: inserimento dati Liliana

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             </thead>
             <tbody>
               <tr>
-                <td style="text-align: center">123456</td>
-                <td style="text-align: center">Abc</td>
-                <td style="text-align: center">Jkl</td>
-                <td style="text-align: center">abc.jkl@studenti.polito.it</td>
-                <td style="text-align: center">abc.jkl</td>
+                <td style="text-align: center">s243954</td>
+                <td style="text-align: center">Scaffidi</td>
+                <td style="text-align: center">Liliana</td>
+                <td style="text-align: center">liliana.scaffidi@gmail.com</td>
+                <td style="text-align: center">LilianaScaffidi</td>
               </tr>
               <tr>
                 <td style="text-align: center">654321</td>
