--- a/index.html
+++ b/index.html
@@ -66,21 +66,15 @@
           <table>
             <thead>
               <tr>
-                <th style="text-align: center">s240165</th>
-                <th style="text-align: center">Siclari</th>
-                <th style="text-align: center">Pamela</th>
-                <th style="text-align: center">pamela.sicl@gmail.com</th>
-                <th style="text-align: center">PamelaSiclari</th>
+                <th style="text-align: center">Matricola</th>
+                <th style="text-align: center">Cognome</th>
+                <th style="text-align: center">Nome</th>
+                <th style="text-align: center">E-mail</th>
+                <th style="text-align: center">GitHub</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td style="text-align: center">s243954</td>
-                <td style="text-align: center">Scaffidi</td>
-                <td style="text-align: center">Liliana</td>
-                <td style="text-align: center">liliana.scaffidi@gmail.com</td>
-                <td style="text-align: center">LilianaScaffidi</td>
-              </tr>
+
               <tr>
                 <td style="text-align: center">s241844</td>
                 <td style="text-align: center">Giuseppe</td>
@@ -89,11 +83,18 @@
                 <td style="text-align: center">GiuseppeGullotta</td>
               </tr>
               <tr>
-                <td style="text-align: center">321456</td>
-                <td style="text-align: center">Ghi</td>
-                <td style="text-align: center">Pqr</td>
-                <td style="text-align: center">ghi.pqr@libero.it</td>
-                <td style="text-align: center">ghipqr</td>
+                <td style="text-align: center">s243954</td>
+                <td style="text-align: center">Scaffidi</td>
+                <td style="text-align: center">Liliana</td>
+                <td style="text-align: center">liliana.scaffidi@gmail.com</td>
+                <td style="text-align: center">LilianaScaffidi</td>
+              </tr>
+              <tr>
+                <td style="text-align: center">s240165</td>
+                <td style="text-align: center">Siclari</td>
+                <td style="text-align: center">Pamela</td>
+                <td style="text-align: center">pamela.sicl@gmail.com</td>
+                <td style="text-align: center">PamelaSiclari</td>
               </tr>
             </tbody>
           </table>
