--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <tr>
                 <td style="text-align: center">s240165</td>
                 <td style="text-align: center">Siclari</td>
-                <td style="text-align: center">Pamelaaaaaa</td>
+                <td style="text-align: center">Pamela</td>
                 <td style="text-align: center">pamela.sicl@gmail.com</td>
                 <td style="text-align: center">PamelaSiclari</td>
               </tr>
