--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="subsection">
           <h2 id="nome-del-progetto-e-repository-github">Nome del progetto e repository github</h2>
 
-          <p>Nome del progetto: BlaBlaBla</p>
+          <p>Nome del progetto: Puzzle</p>
           <p>Repository del sito di presentazione progetto: <a href="https://github.com/SoNet-2017/SampleTeamRepository">https://github.com/SoNet-2017/SampleTeamRepository</a></p>
           <p>Repository del prototipo (codice): <a href="https://github.com/SoNet-2017/SampleTeamRepository-code">https://github.com/SoNet-2017/SampleTeamRepository-code</a></p>
 
