prova testo html: target

--- a/index.html
+++ b/index.html
@@ -115,10 +115,15 @@
           <h3 id="target">Target</h3>
 
           <p>
-            Descrivere il target (categorie di utenti finali) del vostro social network. Inserire dati utili a
-            inquadrare il profilo socio-demografico del target, citando e linkando, dove possibile, le fonti.
-            I dati saranno costituiti da fonti secondarie prese a riferimento ma sopratutto dai risultati
-            della mini-indagine sul target che verrà svolta durante il corso.
+            Target principale: Genitori di bambini di scuola primaria
+            Target secondario: Insegnati di bambini di scuola primaria
+
+            I genitori odierni hanno assunto e continuano ad assumere un ruolo sempre maggiormente predominante nell’educazione scolastica dei propri figli.  Nel peggiore dei casi, alcuni arrivano a svolgere i compiti per i propri figli, spinti principalmente da una costante competizione verso i genitori dei compagni di classe del proprio figlio. “Il mio cavallo corre più veloce del tuo”.
+            http://www.lastampa.it/2014/02/03/societa/mamme/bambini/6-11-anni/i-compiti-li-fanno-mamma-e-pap-RQcAQIn89ZWOnQTA66DajL/pagina.html. Come se il valore di qualcuno possa in qualche modo essere quantificato da un mero numero.
+            Il tutto dunque assume connotazioni prettamente deleterie: i bambini apprendono il minimo, non assumono metodo di studio, risultano essere poco dipendenti, e, facendo riferimento alla figura genitoriale, accrescono il proprio spirito di competizione, non riuscendo ad acquisire capacità di collaborazione tra gruppi, fondamentali nella vita oltre che in ambito lavorativo.
+            L’approdo degli over alla tecnologia, ed in particolar modo a whats’app, comporta una degenerazione del fenomeno. Fonti: http://www.repubblica.it/cronaca/2016/10/11/news/fenomenologia_poco_seria_dei_gruppi_di_genitori_su_whatsapp-149549752/
+
+            https://www.theatlantic.com/magazine/archive/2014/04/and-dont-help-your-kids-with-their-homework/358636/
           </p>
 
           <h3 id="personas">Personas</h3>
