--- a/index.html
+++ b/index.html
@@ -115,15 +115,17 @@
           <h3 id="target">Target</h3>
 
           <p>
-            Target principale: Genitori di bambini di scuola primaria
-            Target secondario: Insegnati di bambini di scuola primaria
+            Target principale: Genitori di bambini di scuola primaria <br>
+            Target secondario: Insegnati di bambini di scuola primaria <br>
 
+            <br>
             I genitori odierni hanno assunto e continuano ad assumere un ruolo sempre maggiormente predominante nell’educazione scolastica dei propri figli.  Nel peggiore dei casi, alcuni arrivano a svolgere i compiti per i propri figli, spinti principalmente da una costante competizione verso i genitori dei compagni di classe del proprio figlio. “Il mio cavallo corre più veloce del tuo”.
-            http://www.lastampa.it/2014/02/03/societa/mamme/bambini/6-11-anni/i-compiti-li-fanno-mamma-e-pap-RQcAQIn89ZWOnQTA66DajL/pagina.html. Come se il valore di qualcuno possa in qualche modo essere quantificato da un mero numero.
+             Come se il valore di qualcuno possa in qualche modo essere quantificato da un mero numero.
             Il tutto dunque assume connotazioni prettamente deleterie: i bambini apprendono il minimo, non assumono metodo di studio, risultano essere poco dipendenti, e, facendo riferimento alla figura genitoriale, accrescono il proprio spirito di competizione, non riuscendo ad acquisire capacità di collaborazione tra gruppi, fondamentali nella vita oltre che in ambito lavorativo.
-            L’approdo degli over alla tecnologia, ed in particolar modo a whats’app, comporta una degenerazione del fenomeno. Fonti: http://www.repubblica.it/cronaca/2016/10/11/news/fenomenologia_poco_seria_dei_gruppi_di_genitori_su_whatsapp-149549752/
-
-            https://www.theatlantic.com/magazine/archive/2014/04/and-dont-help-your-kids-with-their-homework/358636/
+            L’approdo degli over alla tecnologia, ed in particolar modo a whats’app, comporta una degenerazione del fenomeno. <br> Fonti: http://www.repubblica.it/cronaca/2016/10/11/news/fenomenologia_poco_seria_dei_gruppi_di_genitori_su_whatsapp-149549752/
+            <br>
+            https://www.theatlantic.com/magazine/archive/2014/04/and-dont-help-your-kids-with-their-homework/358636/ <br>
+            http://www.lastampa.it/2014/02/03/societa/mamme/bambini/6-11-anni/i-compiti-li-fanno-mamma-e-pap-RQcAQIn89ZWOnQTA66DajL/pagina.html.
           </p>
 
           <h3 id="personas">Personas</h3>
