inserimento link repository code + grassetto in target

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <header>
-      <h1>SampleTeamRepository</h1>
+      <h1>PuzzleRepository</h1>
       <p></p>
     </header>
 
@@ -55,8 +55,8 @@
           <h2 id="nome-del-progetto-e-repository-github">Nome del progetto e repository github</h2>
 
           <p>Nome del progetto: Puzzle</p>
-          <p>Repository del sito di presentazione progetto: <a href="https://github.com/SoNet-2017/SampleTeamRepository">https://github.com/SoNet-2017/SampleTeamRepository</a></p>
-          <p>Repository del prototipo (codice): <a href="https://github.com/SoNet-2017/SampleTeamRepository-code">https://github.com/SoNet-2017/SampleTeamRepository-code</a></p>
+          <p>Repository del sito di presentazione progetto: <a href="https://github.com/SoNet-2017/SampleTeamRepository">PuzzleRepository</a></p>
+          <p>Repository del prototipo (codice): <a href="https://github.com/SoNet-2017/Puzzle-code.git">Puzzle-code</a></p>
 
 
         </div>
@@ -121,8 +121,8 @@
           <h3 id="target">Target</h3>
 
           <p>
-            Target principale: Genitori di bambini di scuola primaria <br>
-            Target secondario: Insegnati di bambini di scuola primaria <br>
+            <b>Target principale</b>: Genitori di bambini di scuola primaria <br>
+            <b>Target secondario</b>: Insegnati di bambini di scuola primaria <br>
 
             <br>
             I genitori odierni hanno assunto e continuano ad assumere un ruolo sempre maggiormente predominante nell’educazione scolastica dei propri figli.  Nel peggiore dei casi, alcuni arrivano a svolgere i compiti per i propri figli, spinti principalmente da una costante competizione verso i genitori dei compagni di classe del proprio figlio. “Il mio cavallo corre più veloce del tuo”.
