aggiunta link repository + sito (ahahah)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="banner">
       <span id="logo"></span>
 
-      <a href="https://github.com/SoNet-2017/css3-lab2" class="button"><strong>View On GitHub</strong></a>
+      <a href="https://github.com/SoNet-2017/Puzzle" class="button"><strong>View On GitHub</strong></a>
 
     </div><!-- end banner -->
 
@@ -55,7 +55,7 @@
           <h2 id="nome-del-progetto-e-repository-github">Nome del progetto e repository github</h2>
 
           <p>Nome del progetto: Puzzle</p>
-          <p>Repository del sito di presentazione progetto: <a href="https://github.com/SoNet-2017/SampleTeamRepository"><i>PuzzleRepository</i></a></p>
+          <p>Repository del sito di presentazione progetto: <a href="https://github.com/SoNet-2017/Puzzle"><i>PuzzleRepository</i></a></p>
           <p>Repository del prototipo (codice): <a href="https://github.com/SoNet-2017/Puzzle-code"><i>Puzzle-code</i></a></p>
 
 
