inserimento funzionalità senza descrizioni

--- a/index.html
+++ b/index.html
@@ -165,16 +165,25 @@
               </thead>
               <tbody>
               <tr>
-                <td style="text-align: center">Nome della funzionalità A</td>
+                <td style="text-align: center">Organizza gruppi di studio ed eventi</td>
                 <td style="text-align: center">Breve descrizione della funzionalità A</td>
               </tr>
               <tr>
-                <td style="text-align: center">Nome della funzionalità B</td>
+                <td style="text-align: center">Chiedi aiuto o supporto ad altri genitori</td>
                 <td style="text-align: center">Breve descrizione della funzionalità B</td>
               </tr>
               <tr>
+                <td style="text-align: center">Contatta l'insegnante</td>
                 <td style="text-align: center">...</td>
-                <td style="text-align: center">...</td>
+              </tr>
+              <td style="text-align: center">Chiedi consiglio ad un esperto</td>
+              <td style="text-align: center">...</td>
+              </tr>
+              <td style="text-align: center">Condividi la tua giornata in classe</td>
+              <td style="text-align: center">...</td>
+              </tr>
+              <td style="text-align: center">Condividi materiale didattico</td>
+              <td style="text-align: center">...</td>
               </tr>
             </tbody>
           </table>
