inserimento funzionalità + descrizioni

--- a/index.html
+++ b/index.html
@@ -153,8 +153,43 @@
 
           <h3 id="funzionalita-complete-del-social-network">Funzionalità complete del social network</h3>
 
-          <p>Inserire una tabella in cui sono elencate (ad alto livello) TUTTE le funzionalità del vostro social network, anche quelle che
-            non compariranno nel prototipo.</p>
+          <!--<p>Inserire una tabella in cui sono elencate (ad alto livello) TUTTE le funzionalità del vostro social network, anche quelle che
+            non compariranno nel prototipo.</p> -->
+
+          <p> Targert principale: <b> GENITORI </b> </p>
+
+          <table>
+            <thead>
+                <tr>
+                  <th style="text-align: center">Funzionalità complete</th>
+                  <th style="text-align: center">Descrizione</th>
+                </tr>
+              </thead>
+
+              <tbody>
+              <tr>
+                <td style="text-align: center"> <b>Organizza gruppi di studio ed eventi </b></td>
+                <td style="text-align: center">Il genitore potrà di organizzare gruppi di studio, fornendo il proprio supporto ai bambini in una determinata materia e/o
+                  organizzare eventi sia scolastici, in cui rendere partecipi gli altri genitori (mercatini di Natale, feste, recite), sia extra-scolastici (serate tra genitori/insegnati ecc..)
+                </td>
+              </tr>
+              <tr>
+                <td style="text-align: center">Chiedi aiuto o supporto ad altri genitori</td>
+                <td style="text-align: center">Il genitore potrà di contattare gli altri genitori per richiedere qualsiasi tipo di "supporto" (passaggio a scuola ecc) e/o informazione</td>
+              </tr>
+              <tr>
+                <td style="text-align: center">Contatta l'insegnante</td>
+                <td style="text-align: center">Il genitore potrà di contattare l'insegnante ma in maniera "asincrona", non sfruttando una chat diretta</td>
+              </tr>
+              <tr>
+                <td style="text-align: center">Chiedi consiglio ad un esperto</td>
+                <td style="text-align: center">Il genitore potrà richiedere consulenza ad un esperto (psicologo, sessuologo ecc) nel caso in cui lo ritenesse necessario per il proprio figlio</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <br>
+          <p> Targert secondario: <b> INSEGNANTI </b></p>
 
           <table>
             <thead>
@@ -162,28 +197,16 @@
                 <th style="text-align: center">Funzionalità complete</th>
                 <th style="text-align: center">Descrizione</th>
               </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <td style="text-align: center">Organizza gruppi di studio ed eventi</td>
-                <td style="text-align: center">Breve descrizione della funzionalità A</td>
+            </thead>
+
+            <tbody>
+            <tr>
+                <td style="text-align: center">Condividi la tua giornata in classe</td>
+                <td style="text-align: center">L'insegnante potrà giornalmente tenere informati i genitori su ciò che è accaduto in classe</td>
               </tr>
               <tr>
-                <td style="text-align: center">Chiedi aiuto o supporto ad altri genitori</td>
-                <td style="text-align: center">Breve descrizione della funzionalità B</td>
-              </tr>
-              <tr>
-                <td style="text-align: center">Contatta l'insegnante</td>
-                <td style="text-align: center">...</td>
-              </tr>
-              <td style="text-align: center">Chiedi consiglio ad un esperto</td>
-              <td style="text-align: center">...</td>
-              </tr>
-              <td style="text-align: center">Condividi la tua giornata in classe</td>
-              <td style="text-align: center">...</td>
-              </tr>
-              <td style="text-align: center">Condividi materiale didattico</td>
-              <td style="text-align: center">...</td>
+                <td style="text-align: center">Condividi materiale didattico</td>
+                <td style="text-align: center">L'insegnante potrà caricare del supporto didattico per i propri alunni</td>
               </tr>
             </tbody>
           </table>
@@ -241,6 +264,8 @@
               </tr>
             </tbody>
           </table>
+
+
 
           <h3 id="architettura-dellinformazione">Architettura dell'informazione</h3>
 
