--- a/index.html
+++ b/index.html
@@ -169,17 +169,17 @@
               <tbody>
               <tr>
                 <td style="text-align: center"> <b>Organizza gruppi di studio ed eventi </b></td>
-                <td style="text-align: center">Il genitore potrà di organizzare gruppi di studio, fornendo il proprio supporto ai bambini in una determinata materia e/o
+                <td style="text-align: center">Il genitore potrà organizzare gruppi di studio, fornendo il proprio supporto ai bambini in una determinata materia e/o
                   organizzare eventi sia scolastici, in cui rendere partecipi gli altri genitori (mercatini di Natale, feste, recite), sia extra-scolastici (serate tra genitori/insegnati ecc..)
                 </td>
               </tr>
               <tr>
                 <td style="text-align: center">Chiedi aiuto o supporto ad altri genitori</td>
-                <td style="text-align: center">Il genitore potrà di contattare gli altri genitori per richiedere qualsiasi tipo di "supporto" (passaggio a scuola ecc) e/o informazione</td>
+                <td style="text-align: center">Il genitore potrà contattare gli altri genitori per richiedere qualsiasi tipo di "supporto" (passaggio a scuola ecc) e/o informazione</td>
               </tr>
               <tr>
                 <td style="text-align: center">Contatta l'insegnante</td>
-                <td style="text-align: center">Il genitore potrà di contattare l'insegnante ma in maniera "asincrona", non sfruttando una chat diretta</td>
+                <td style="text-align: center">Il genitore potrà contattare l'insegnante ma in maniera "asincrona" (non sfruttando una chat diretta)</td>
               </tr>
               <tr>
                 <td style="text-align: center">Chiedi consiglio ad un esperto</td>
