Funzionalità: variazione testi

--- a/index.html
+++ b/index.html
@@ -169,21 +169,21 @@
               <tbody>
               <tr>
                 <td style="text-align: center"> <b>Organizza gruppi di studio ed eventi </b></td>
-                <td style="text-align: center">Il genitore potrà organizzare gruppi di studio, fornendo il proprio supporto ai bambini in una determinata materia e/o
+                <td style="text-align: center">Il genitore può organizzare gruppi di studio, fornendo il proprio supporto ai bambini in una determinata materia e/o
                   organizzare eventi sia scolastici, in cui rendere partecipi gli altri genitori (mercatini di Natale, feste, recite), sia extra-scolastici (serate tra genitori/insegnati ecc..)
                 </td>
               </tr>
               <tr>
                 <td style="text-align: center">Chiedi aiuto o supporto ad altri genitori</td>
-                <td style="text-align: center">Il genitore potrà contattare gli altri genitori per richiedere qualsiasi tipo di "supporto" (passaggio a scuola ecc) e/o informazione</td>
+                <td style="text-align: center">Il genitore può contattare gli altri genitori per richiedere qualsiasi tipo di "supporto" (passaggio a scuola ecc) e/o informazione</td>
               </tr>
               <tr>
                 <td style="text-align: center">Contatta l'insegnante</td>
-                <td style="text-align: center">Il genitore potrà contattare l'insegnante ma in maniera "asincrona" (non sfruttando una chat diretta)</td>
+                <td style="text-align: center">Il genitore può contattare l'insegnante in maniera "asincrona" (non sfruttando una chat diretta)</td>
               </tr>
               <tr>
                 <td style="text-align: center">Chiedi consiglio ad un esperto</td>
-                <td style="text-align: center">Il genitore potrà richiedere consulenza ad un esperto (psicologo, sessuologo ecc) nel caso in cui lo ritenesse necessario per il proprio figlio</td>
+                <td style="text-align: center">Il genitore può richiedere consulenza ad un esperto (psicologo, sessuologo ecc) nel caso in cui lo ritenga necessario per il proprio figlio</td>
               </tr>
             </tbody>
           </table>
@@ -202,11 +202,11 @@
             <tbody>
             <tr>
                 <td style="text-align: center">Condividi la tua giornata in classe</td>
-                <td style="text-align: center">L'insegnante potrà giornalmente tenere informati i genitori su ciò che è accaduto in classe</td>
+                <td style="text-align: center">L'insegnante può giornalmente tenere informati i genitori su ciò che è accaduto in classe</td>
               </tr>
               <tr>
                 <td style="text-align: center">Condividi materiale didattico</td>
-                <td style="text-align: center">L'insegnante potrà caricare del supporto didattico per i propri alunni</td>
+                <td style="text-align: center">L'insegnante può caricare del supporto didattico per i propri alunni</td>
               </tr>
             </tbody>
           </table>
