Modifica CSS - advance

--- a/index.html
+++ b/index.html
@@ -316,6 +316,8 @@
       <p>Questa sezione deve contenere una breve analisi degli eventuali problemi riscontrati durante la valutazione e le modifiche
         da implementare nella (ipotetica) seconda versione del prototipo</p>
 
+    <!-- COMMENTO -->
+
 
     </div>
   </section>
