Modifica BANNER Up

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <header>
-  <img src="images/test_puzzle_3_color.png" id="logo-banner">
+  <img src="images/banner.png" id="logo-banner">
 </header>
 
 <div id="banner">
