Modifica dimensione BANNER Up

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 <body>
 
+<!-- LOGO SOCIAL NETWORK -->
 <header>
   <img src="images/banner.png" id="logo-banner">
 </header>
+<!-- FINE LOGO SOCIAL NETWORK -->
 
 <div id="banner">
 
