Modifica dimensione BANNER Up

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- LOGO SOCIAL NETWORK -->
 <header>
-  <img src="images/test_puzzle_3_bis.png" id="logo-banner">
+  <img src="images/banner.png" id="logo-banner">
 </header>
 <!-- FINE LOGO SOCIAL NETWORK -->
 
