--- a/index.html
+++ b/index.html
@@ -286,8 +286,11 @@
 
       <h3 id="architettura-dellinformazione">Architettura dell'informazione</h3>
 
-      <p>Inserire i diagrammi in grado di descrivere adeguatamente la struttura del vostro social network e/o il flusso di
-        interazione dell'utente</p>
+      <p>
+        <a href="images/Puzzle-FlowChart.png">
+          <img src="images/Puzzle-FlowChart.png" id="schema">
+        </a>
+      </p>
 
 
 
