resize SCHEMA FlowChart

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
       <h3 id="architettura-dellinformazione">Architettura dell'informazione</h3>
 
-      <p>
+      <p id="schema">
         <a href="images/Puzzle-FlowChart.png">
           <img src="images/Puzzle-FlowChart.png" id="schema">
         </a>
