--- a/index.html
+++ b/index.html
@@ -286,11 +286,12 @@
 
       <h3 id="architettura-dellinformazione">Architettura dell'informazione</h3>
 
-      <p id="schema">
+      <div id="schema">
+
         <a href="images/Puzzle-FlowChart.png">
           <img src="images/Puzzle-FlowChart.png" id="schema">
         </a>
-      </p>
+      </div>
 
 
 
