--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
 
       <h3 id="architettura-dellinformazione">Architettura dell'informazione</h3>
 
-      <div id="schema">
+      <div class="schema">
 
         <a href="images/Puzzle-FlowChart.png">
-          <img src="images/Puzzle-FlowChart.png" id="schema">
+          <img src="images/Puzzle-FlowChart.png" class="schema">
         </a>
       </div>
 
