Funzionalità aggiuntive: inserimento funzionalità

--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
       <p>Se vengono fatte delle semplificazioni inserirle in questa sezione, sotto la tabella.</p>
 
       <div style="overflow-x:auto"> <!--TABELLE COSTANTI, AGGIUNTA DI CURSORE PER SCORRERE-->
+
+        <p> Targert principale: <b> GENITORI </b> </p>
         <table>
           <thead>
           <tr>
@@ -238,46 +240,143 @@
           </thead>
           <tbody>
           <tr>
-            <td>Nome della funzionalità 1</td>
-            <td>Breve descrizione della funzionalità 1</td>
+            <td>Login</td>
+            <td>Accesso alla homepage </td>
             <td>Nome della funzionalità A</td>
             <td></td>
           </tr>
           <tr>
-            <td>Nome della funzionalità 2</td>
+            <td>Registrazione</td>
             <td>Breve descrizione della funzionalità 2</td>
             <td>Nome della funzionalità A</td>
             <td></td>
           </tr>
           <tr>
-            <td>Nome della funzionalità 3</td>
-            <td>Breve descrizione della funzionalità 3</td>
+            <td>Partecipa all'evento</td>
+            <td>Partecipazione all'evento</td>
             <td>Nome della funzionalità A</td>
             <td></td>
           </tr>
           <tr>
-            <td>Nome della funzionalità 4</td>
-            <td>Breve descrizione della funzionalità 4</td>
+            <td>Crea evento Scuola</td>
+            <td></td>
             <td>Nome della funzionalità B</td>
             <td></td>
           </tr>
           <tr>
-            <td>Nome della funzionalità 5</td>
+            <td>Crea evento Casa</td>
             <td>Breve descrizione della funzionalità 5</td>
             <td>Nome della funzionalità B</td>
             <td></td>
           </tr>
           <tr>
-            <td>Nome della funzionalità 6</td>
+            <td>Crea evento Extra</td>
             <td>Breve descrizione della funzionalità 6</td>
             <td>Nome della funzionalità B</td>
             <td></td>
           </tr>
           <tr>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
+            <td>Contatta il genitore</td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> Contatta l'insegnante</td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td>Contatta l'esperto</td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td>Carica immagine</td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> Carica documento </td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+          </tr>
+          </tbody>
+        </table>
+
+        <p> Targert secondario: <b> INSEGNANTI </b> </p>
+        <table>
+          <thead>
+          <tr>
+            <th>Funzionalità</th>
+            <th>Descrizione</th>
+            <th>Riferimento funzionalità completa</th>
+            <th>To do</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <td>Login</td>
+            <td>Accesso alla homepage </td>
+            <td>Nome della funzionalità A</td>
             <td></td>
+          </tr>
+          <tr>
+            <td>Registrazione</td>
+            <td>Breve descrizione della funzionalità 2</td>
+            <td>Nome della funzionalità A</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Partecipa all'evento</td>
+            <td>Partecipazione all'evento</td>
+            <td>Nome della funzionalità A</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Crea evento Scuola</td>
+            <td></td>
+            <td>Nome della funzionalità B</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Contatta il genitore</td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td>Contatta l'insegnante</td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+          </tr>
+          <td>Condividi la tua giornata in classe</td>
+          <td> .... </td>
+          <td> .... </td>
+          <td> .... </td>
+          </tr>
+          <tr>
+            <td>Carica immagine </td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+          </tr>
+            <tr>
+            <td>Carica documento</td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
+            </tr>
+          <tr>
+            <td>Carica video</td>
+            <td> .... </td>
+            <td> .... </td>
+            <td> .... </td>
           </tr>
           </tbody>
         </table>
