--- a/index.html
+++ b/index.html
@@ -141,8 +141,27 @@
 
       <h3 id="personas">Personas</h3>
 
-      <p>Creare due  "personas" che, in base alla definizione del target delineata, caratterizzano
-        gli utenti "tipo" del sistema.</p>
+      <p>
+        <b>Francesca</b><br>
+        Lavora in uno studio associato di architetti<br>
+        Ha una bambina di 7 anni ma poco tempo libero da dedicarle in settimana<br>
+        E’ appassionata d’arte: le piace visitare gallerie, mostre, musei, … insieme alla figlia e al compagno nel fine settimana<br>
+        Ha un ottimo rapporto con tutte le tecnologie<br><br>
+        <b>Sara</b><br>
+        “Mamma” di professione<br>
+        Dedica tutto il suo tempo ai suoi due bambini<br>
+        Si ritaglia del tempo per sé solo per fare jogging o andare in bicicletta<br>
+        Utilizza il computer per cercare nuove ricette da provare o per aiutare i figli con le ricerche<br><br>
+        <b>Antonia</b><br>
+        Insegna ai bambini di scuola elementare da 23 anni<br>
+        Ha due figli ormai grandi: uno è un avvocato, l’altro studia ancora all’università<br>
+        Ama leggere<br>
+        Si destreggia bene con le nuove tecnologie<br><br>
+        <b>Aurora</b><br>
+        Ha 31 anni e insegna le materie linguistiche alla scuola primaria<br>
+        Nel tempo libero adora viaggiare con gli amici<br>
+        Ama stare a contatto con i bambini<br><br>
+      </p>
 
       <h3 id="scenarios">Scenarios</h3>
 
