Aggiornamento funzionalità genitori

--- a/index.html
+++ b/index.html
@@ -232,81 +232,84 @@
         <table>
           <thead>
           <tr>
-            <th>Funzionalità</th>
-            <th>Descrizione</th>
-            <th>Riferimento funzionalità completa</th>
+            <th> Macroarea </th>
+            <th> Funzionalità specifica </th>
+            <th> Descrizione</th>
             <th>To do</th>
           </tr>
           </thead>
           <tbody>
           <tr>
+            <td> <b> Accesso </b> </td>
             <td>Login</td>
             <td>Accesso alla homepage </td>
-            <td>Nome della funzionalità A</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Registrazione</td>
-            <td>Breve descrizione della funzionalità 2</td>
-            <td>Nome della funzionalità A</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Partecipa all'evento</td>
-            <td>Partecipazione all'evento</td>
-            <td>Nome della funzionalità A</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Crea evento Scuola</td>
-            <td></td>
-            <td>Nome della funzionalità B</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Crea evento Casa</td>
-            <td>Breve descrizione della funzionalità 5</td>
-            <td>Nome della funzionalità B</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Crea evento Extra</td>
-            <td>Breve descrizione della funzionalità 6</td>
-            <td>Nome della funzionalità B</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Contatta il genitore</td>
-            <td> .... </td>
-            <td> .... </td>
             <td> .... </td>
           </tr>
           <tr>
+            <td> <b>Registrazione</b> </td>
+            <td> Registrazione </td>
+            <td> Inserimento dei propri dati (social, anagrafici, scuola) </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> <b>Eventi</b> </td>
+            <td> Partecipa all'evento </td>
+            <td> Dopo aver ricevuto l'invito, ciascun genitore può avere la possibilità di partecipare o meno all'evento organizzato </td>
+            <td> ... </td>
+          </tr>
+          <tr>
+            <td> </td>
+            <td> Crea evento "Scuola" </td>
+            <td> Organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc ), scegliendo di poterli
+            condividere con gli insegnanti o i genitori</td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> </td>
+            <td> Crea evento "Casa" </td>
+            <td> Il genitore può organizzare gruppi di studio a casa propria, fornendo il proprio supporto ai bambini in una determinata materia</td>
+            <td> ... </td>
+          </tr>
+          <tr>
+            <td> </td>
+            <td> Crea evento "Extra" </td>
+            <td> Il genitore può organizzare eventi esterni alla scuola (partite a calcetto, incontri tra genitori/insegnanti, ecc ecc)  </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> <b>Comunicazione</b> </td>
+            <td> Contatta il genitore </td>
+            <td> Il genitore può contattare privatamente un altro genitore, in maniera "asincrona", per chiedere aiuto (consigli, passaggi a scuola) ecc ecc... </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td> </td>
             <td> Contatta l'insegnante</td>
-            <td> .... </td>
-            <td> .... </td>
-            <td> .... </td>
-          </tr>
-          <tr>
-            <td>Contatta l'esperto</td>
-            <td> .... </td>
-            <td> .... </td>
+            <td> Il genitore può contattare privatamente, in maniera "asincrona", l'insegnante per richiedere informazioni, appuntamenti ecc ecc </td>
             <td> .... </td>
           </tr>
           <tr>
-            <td>Carica immagine</td>
-            <td> .... </td>
-            <td> .... </td>
+            <td>  </td>
+            <td> Contatta l'esperto</td>
+            <td> Il genitore può contattare un esperto (psicologo, sessuologo) nel caso in cui lo ritenga necessario per il proprio figlio   </td>
             <td> .... </td>
           </tr>
           <tr>
+            <td> <b> Spazio genitori </b> </td>
+            <td> Carica immagine</td>
+            <td> In una sorta di spazio condiviso "dropbox", il genitore può condividere con gli altri genitori foto relative a particolari eventi ecc ecc </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+            <td>  </td>
             <td> Carica documento </td>
-            <td> .... </td>
-            <td> .... </td>
+            <td> In una sorta di spazio condiviso "dropbox", il genitore può condividere con gli altri genitori file pdf, word relativi alla scuola </td>
             <td> .... </td>
           </tr>
           </tbody>
         </table>
+
+        <br>
 
         <p> Targert secondario: <b> INSEGNANTI </b> </p>
         <table>
@@ -333,13 +336,13 @@
           </tr>
           <tr>
             <td>Partecipa all'evento</td>
-            <td>Partecipazione all'evento</td>
+            <td> .... </td>
             <td>Nome della funzionalità A</td>
             <td></td>
           </tr>
           <tr>
             <td>Crea evento Scuola</td>
-            <td></td>
+            <td>Organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc )</td>
             <td>Nome della funzionalità B</td>
             <td></td>
           </tr>
@@ -356,7 +359,7 @@
             <td> .... </td>
           </tr>
           <td>Condividi la tua giornata in classe</td>
-          <td> .... </td>
+          <td>  </td>
           <td> .... </td>
           <td> .... </td>
           </tr>
@@ -385,7 +388,7 @@
 
       <h3 id="architettura-dellinformazione">Architettura dell'informazione</h3>
 
-      <p id="schema">
+      <p>
         <a href="images/Puzzle-FlowChart.png">
           <img src="images/Puzzle-FlowChart.png" id="schema">
         </a>
