Aggiornamento funzionalità genitori - insegnanti /sudivisioni macroaree

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           <tr>
             <td> </td>
             <td> Crea evento "Scuola" </td>
-            <td> Organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc ), scegliendo di poterli
+            <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc ), scegliendo di poterli
             condividere con gli insegnanti o i genitori</td>
             <td> .... </td>
           </tr>
@@ -292,19 +292,20 @@
           <tr>
             <td> </td>
             <td> Crea evento "Extra" </td>
-            <td> Il genitore può organizzare eventi esterni alla scuola (partite a calcetto, incontri tra genitori/insegnanti, ecc ecc)  </td>
+            <td> Il genitore può organizzare eventi esterni alla scuola (partite a calcetto, incontri tra genitori/insegnanti, ecc ecc), scegliendo di poterli
+                condividere con gli insegnanti o i genitori  </td>
             <td> .... </td>
           </tr>
           <tr>
             <td> <b>Comunicazione</b> </td>
             <td> Contatta il genitore </td>
-            <td> Il genitore può contattare privatamente un altro genitore, in maniera "asincrona", per chiedere aiuto (consigli, passaggi a scuola) ecc ecc... </td>
+            <td> Il genitore può contattare privatamente un altro genitore, in maniera "asincrona", per chiedere aiuto (consigli, informazioni, passaggi a scuola) </td>
             <td> .... </td>
           </tr>
           <tr>
             <td> </td>
             <td> Contatta l'insegnante</td>
-            <td> Il genitore può contattare privatamente, in maniera "asincrona", l'insegnante per richiedere informazioni, appuntamenti ecc ecc </td>
+            <td> Il genitore può contattare privatamente, in maniera "asincrona", l'insegnante per richiedere informazioni, appuntamenti ecc ecc... </td>
             <td> .... </td>
           </tr>
           <tr>
@@ -334,69 +335,70 @@
         <table>
           <thead>
           <tr>
-            <th>Funzionalità</th>
-            <th>Descrizione</th>
-            <th>Riferimento funzionalità completa</th>
-            <th>To do</th>
+              <th> Macroarea </th>
+              <th> Funzionalità specifica </th>
+              <th> Descrizione</th>
+              <th>To do</th>
           </tr>
           </thead>
           <tbody>
           <tr>
-            <td>Login</td>
-            <td>Accesso alla homepage </td>
-            <td>Nome della funzionalità A</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Registrazione</td>
-            <td>Breve descrizione della funzionalità 2</td>
-            <td>Nome della funzionalità A</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Partecipa all'evento</td>
-            <td> .... </td>
-            <td>Nome della funzionalità A</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Crea evento Scuola</td>
-            <td>Organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc )</td>
-            <td>Nome della funzionalità B</td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Contatta il genitore</td>
-            <td> .... </td>
-            <td> .... </td>
+              <td> <b> Accesso </b> </td>
+            <td> Login </td>
+            <td> Accesso alla homepage </td>
             <td> .... </td>
           </tr>
           <tr>
-            <td>Contatta l'insegnante</td>
-            <td> .... </td>
-            <td> .... </td>
+              <td> <b>Registrazione</b> </td>
+              <td> Registrazione </td>
+              <td> Inserimento dei propri dati (social, anagrafici, scuola) </td>
+              <td> .... </td>
+          </tr>
+          <tr>
+              <td> <b> Eventi </b> </td>
+            <td> Partecipa all'evento</td>
+            <td> Dopo aver ricevuto l'invito, ciascun insegnante può avere la possibilità di partecipare o meno all'evento organizzato </td>
             <td> .... </td>
           </tr>
-          <td>Condividi la tua giornata in classe</td>
-          <td>  </td>
+          <tr>
+              <td> </td>
+            <td> Crea evento Scuola</td>
+            <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc... ), scegliendo di poterli
+                 condividere con gli insegnanti o i genitori</td>
+            <td> .... </td>
+          </tr>
+          <tr>
+              <td> <b>Comunicazione</b> </td>
+            <td> Contatta il genitore </td>
+            <td> L'insegnante può contattare privatamente, in maniera "asincrona", il genitore per appuntamenti, fornire informazioni relative al proprio figlio ecc ecc... </td>
+            <td> .... </td>
+          </tr>
+          <tr>
+              <td> </td>
+            <td> Contatta l'insegnante </td>
+            <td> L'insegnante può contattare privatamente, in maniera "asincrona", un altro insegnante </td>
+            <td> .... </td>
+          </tr>
+          <td> </td>
+          <td> Condividi la tua giornata in classe </td>
+          <td> L'insegnante avrà la possibilità di aggiornare l'homepage "diario di classe", a cui hanno accesso sia i genitori, sia gli insegnanti della classe dei propri alunni </td>
           <td> .... </td>
-          <td> .... </td>
           </tr>
           <tr>
-            <td>Carica immagine </td>
-            <td> .... </td>
-            <td> .... </td>
+              <td> <b> Materiale didattico </b> </td>
+            <td> Carica immagine </td>
+            <td> ....  </td>
             <td> .... </td>
           </tr>
             <tr>
+                <td> </td>
             <td>Carica documento</td>
-            <td> .... </td>
             <td> .... </td>
             <td> .... </td>
             </tr>
           <tr>
+              <td>  </td>
             <td>Carica video</td>
-            <td> .... </td>
             <td> .... </td>
             <td> .... </td>
           </tr>
